--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "eslint": "^8.55.0",
@@ -37,8 +38,10 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "html-webpack-plugin": "^5.6.0",
     "jsdom": "^24.0.0",
+    "postcss": "^8.4.35",
     "prettier": "3.2.4",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.8",
     "vitest": "^1.2.2",
     "webpack": "^5.90.1",
