--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "html-webpack-plugin": "^5.6.0",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^9.5.0",
     "prettier": "3.2.4",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
